--- a/templates/tmpl_homepage.html
+++ b/templates/tmpl_homepage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="../static/style.css">
+	<link rel="stylesheet" href="/static/style.css">
 	<meta property="og:title" content="NixHub">
 	<meta property="og:image"
 		  content="https://cdn.discordapp.com/icons/361910177961738242/0680ca1999781a45dafca3e281863a7a.png?size=128">
