--- a/templates/tmpl_homepage.html
+++ b/templates/tmpl_homepage.html
@@ -12,9 +12,13 @@
 	<main>
 		<h1>NixHub</h1>
 		<nav>
-			<a id="discord">Discord</a>
-			<a id="irc">IRC</a>
+			<a id="discord" href="https://discord.gg/kF9mYBV">Discord</a>
+			<a id="irc" href="irc://chat.freenode.net:6697/nixhub">IRC</a>
 		</nav>
+		<h6 class="warn">
+			This page does not require JavaScript for the live message feed.
+			Your IP address is used to get the timezone, but is not stored.
+		</h6>
 	</main>
 
 	<aside class="background">
