--- a/templates/tmpl_homepage.html
+++ b/templates/tmpl_homepage.html
@@ -8,8 +8,8 @@
 		  content="https://cdn.discordapp.com/icons/361910177961738242/0680ca1999781a45dafca3e281863a7a.png?size=128">
 </head>
 
-<body>
-	<main>
+<body class="homepage">
+	<main class="homepage">
 		<h1>NixHub</h1>
 		<nav>
 			<a id="discord" href="https://discord.gg/kF9mYBV">Discord</a>
