--- a/templates/tmpl_homepage.html
+++ b/templates/tmpl_homepage.html
@@ -3,13 +3,15 @@
 
 <head>
 	<link rel="stylesheet" href="/static/style.css">
+	<link rel="shortcut icon" href="/static/icon.png" />
 	<meta property="og:title" content="NixHub">
 	<meta property="og:image"
-		  content="https://cdn.discordapp.com/icons/361910177961738242/0680ca1999781a45dafca3e281863a7a.png?size=128">
+		  content="/static/icon.png">
 </head>
 
 <body class="homepage">
 	<main class="homepage">
+		<img class="logo" src="/static/icon.png" />
 		<h1>NixHub</h1>
 		<nav>
 			<a id="discord" href="https://discord.gg/kF9mYBV">Discord</a>
